--- a/src/index.html
+++ b/src/index.html
@@ -104,8 +104,8 @@
                     </button>       
                 </div>
                 <address class="footer-info">
-                    <a class="burger-menu__footer--email" href="mailto:mail@cps.com">mail@cps.com</a>
-                    <a class="burger-menu__footer--number" href="tel:8 800 890 8900">8 800 890 8900</a>  
+                    <a class="burger-menu__footer--email" href="mailto:mail@cps.com">mail@abc.com</a>
+                    <a class="burger-menu__footer--number" href="tel:8 800 890 8900">1 234 567 8910</a>  
                 </address>
                 <ul class="footer-lang-list">
                     <li>
@@ -129,7 +129,7 @@
                     <img class="burger__icon" src="./img/burger.svg" alt="меню">
             </button>
             <a class="menu__link" href="#">
-            <img  src="./img/Group.svg" alt="логотип CSP">
+            <img  style="width: 50px" src="./img/abc_logo.svg" alt="логотип CSP">
             </a>
         </div>
         
@@ -510,7 +510,7 @@
         </div>        
         </main>
         <footer class="main-footer">
-            <p class="main-footer__text main-footer__text--style">© 2019 CPS<br>Разработано командой Apesong</p>
+            <p class="main-footer__text main-footer__text--style">© 2019 ABC<br>Разработано командой DenisVLN</p>
             <a href="#"><p class="main-footer__text main-footer__text--style">Политика конфиденциальности</p></a>
             <p class="main-footer__text main-footer__text--style">Информация, размещенная на данной странице, не является публичной офертой</p>
         </footer>
