--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <img class="burger__icon" src="./img/burger.svg" alt="меню">
             </button>
             <a class="menu__link" href="#">
-            <img src="./img/Group.svg" alt="логотип CSP">
+            <img style="width: 50px" src="./img/abc_logo.svg" alt="логотип CSP">
             </a>
         </div>
         
